--- a/asteroid/main.html
+++ b/asteroid/main.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <script src="vector.js"></script>
     <script src="path.js"></script>
+    <script src="moveable.js"></script>
+    <script src="projectile.js"></script>
     <script src="asteroid.js"></script>
     <script src="main.js"></script>
     
